[package]
name = "verzcon"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
serde_json = "1.0.68"
curl = "0.4.38"
md5 = "0.7.0"
tar = "0.4"
public-ip = "0.2"
tokio = { version = "1.12.0", features = ["full"] }